Prevent images from growing outside the page on mobile

--- a/core/static/core/css/screen.css
+++ b/core/static/core/css/screen.css
@@ -271,6 +271,10 @@ textarea {
 		border-right: none;
 	}
 
+		#left img {
+			max-width: 100%;
+		}
+
 	#right {
 		display: none;
 	}
